opdate theme 01 width more theme option

--- a/AnperoFrontend/index2.html
+++ b/AnperoFrontend/index2.html
@@ -6,19 +6,14 @@
     <link rel="stylesheet" type="text/css" href="assets/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/lib/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/lib/select2/css/select2.min.css" />
-    <link rel="stylesheet" type="text/css" href="assets/lib/jquery.bxslider/jquery.bxslider.css" />
-    <link rel="stylesheet" type="text/css" href="assets/lib/owl.carousel/owl.carousel.css" />
+    <link rel="stylesheet" type="text/css" href="assets/lib/jquery-bxslider/jquery-bxslider.css" />
+    <link rel="stylesheet" type="text/css" href="assets/lib/owl-carousel/owl-carousel.css" />
     <link rel="stylesheet" type="text/css" href="assets/lib/jquery-ui/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-
-    
-
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
-
-    <link rel="stylesheet" type="text/css" href="assets/css/option2.css" />
-    
+    <link rel="stylesheet" type="text/css" href="assets/css/option2.css" />    
     <title>Kute shop - themelot.net Option 2</title>
 </head>
 <body class="home option2">
