--- a/BDS_04_BatDongSan_MultiLand/assets/checkout.html
+++ b/BDS_04_BatDongSan_MultiLand/assets/checkout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -664,7 +664,7 @@
                         <div class="input-group" id="mail-box">
                           <input type="text" placeholder="Your Email Address"/>
                           <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">OK</button>
+                            <button class="btn btn-primary" type="button">OK</button>
                           </span>
                         </div><!-- /input-group -->
                         <div class="introduce-title">Let's Socialize</div>
