--- a/06_Shop_Onepage/index.html
+++ b/06_Shop_Onepage/index.html
@@ -764,7 +764,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-3 xs-bottom-40">
                         <div class="single-footer xs-bottom-40">
                             <div class="footer-logo">
-                                <img src="images/footer-logo.png" alt="pet">
+                                <img src="/images/footer-logo.png" alt="pet">
                             </div>
                             <p>203, Envato Labs, Behind Alis Steet, Melbourne, Australia.</p>
                             <div class="contact-details">
