--- a/04_Shop_multiProduct/assets/checkout.html
+++ b/04_Shop_multiProduct/assets/checkout.html
@@ -568,8 +568,7 @@
                 </div>
             </div>
             <!-- userinfo on top-->
-            <div id="form-search-opntop">
-            </div>
+            <div id="form-search-opntop"></div>
             <!-- userinfo on top-->
             <div id="user-info-opntop">
             </div>
