--- a/16_Shop_MultiProduct/aboutHtml.html
+++ b/16_Shop_MultiProduct/aboutHtml.html
@@ -3,12 +3,11 @@
         <div class="wrapper_bl" style="margin-top: 1px;">
             <div class="form_background">
                 <div class="container">
-                    <div class="vc_row wpb_row vc_row-fluid ovic_custom_5b7bd72aa9a22 vc_custom_1534841895972" data-vc-full-width="true" data-vc-full-width-init="true" style="position: relative; left: -348.5px; box-sizing: border-box; width: 1867px; padding-left: 318.5px; padding-right: 318.5px;">
+                    <div class="vc_row wpb_row vc_row-fluid ovic_custom_5b7bd72aa9a22 vc_custom_1534841895972" data-vc-full-width="true" data-vc-full-width-init="true" style="position: relative; left: -348.5px; box-sizing: border-box; width: 1867px; padding-left: 318.5px; padding-right: 318.5px;background-image:url(https://cdn.anpero.com/images/54/12020/image2020012002404314.jpg) !important;">
                         <div class="wpb_column vc_column_container vc_col-sm-12">
                             <div class="vc_column-inner">
                                 <div class="wpb_wrapper">
                                     <div class="vc_custom_heading ovic_custom_5b7bd72aa9a6a vc_custom_1534842651086" style="font-size: 50px;color: #ffffff;line-height: 50px;text-align: center">About Us</div>
-
                                     <div class="wpb_text_column wpb_content_element ovic_custom_5b7bd72aa9bb8 ">
                                         <div class="wpb_wrapper">
                                             <div style="text-align: center; max-width: 555px; font-size: 18px; line-height: 28px; color: #fff; margin: 0 auto;">Passion may be a friendly or eager interest in or admiration for a proposal, cause, discovery, or activity or love to a feeling of excitement.</div>
