--- a/17_Tour/html/hanhtrinh/malaysia.html
+++ b/17_Tour/html/hanhtrinh/malaysia.html
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-<div class="text-center" id="member-area" style="padding-top: 5%;padding-bottom: 5%;">
+<div class="text-center container-fluid" id="member-area" style="padding-top: 5%;padding-bottom: 5%;">
     <h1 class="text-center font-bold-play-fair">Th&agrave;nh Vi&ecirc;n Đo&agrave;n</h1>
 
     <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom: 5%;height:1px;">&nbsp;</div>
