--- a/17_moivietnam/assets/shop.html
+++ b/17_moivietnam/assets/shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Popular Categories</title>
@@ -98,7 +98,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="navbar-cart-total">Subtotal: $75.00</div><a class="btn btn-sm navbar-cart-btn" href="checkout.html">Checkout</a>
+                    
                   </div>
                 </div>
                 <div class="navbar-subpanel-item">
