--- a/17_moivietnam/404.html
+++ b/17_moivietnam/404.html
@@ -120,7 +120,7 @@
                 <li>Nếu bạn đã từng vào được địa chỉ này, vui lòng click vào <a href="/home/contact">Liên hệ </a> để được hỗ trợ.</li>
             </ul>
             <div class="sitelink">
-                <a href="/">Trang chủ</a> | <a href="https://ola88.com/login">Đăng nhập</a> | <a href="/home/contact">Liên hệ</a>
+                <a href="/">Trang chủ</a>
             </div>
         </div>
     </div>
